--- a/.github/workflows/logicApp.yml
+++ b/.github/workflows/logicApp.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and Deploy Logic App
+name: Build and Deploy Logic App2
 
 env:
   LA_NAME: 'enterprise-starter-logic-app'
