--- a/.github/workflows/logicApp.yml
+++ b/.github/workflows/logicApp.yml
@@ -1,11 +1,11 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and Deploy Logic App2
+name: Build and Deploy Logic App
 
 env:
-  LA_NAME: 'enterprise-starter-logic-app'
-  APIM_NAME: 'enterprise-starter-apim'
+  LA_NAME: 'logic-eis-dev-auea'
+  APIM_NAME: 'apim-eis-dev-auea'
   WORKFLOW_NAME: 'eisHttpRequest2'
 on:
   workflow_dispatch:
